--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 
         </nav>
         <h1>Cholcolate Pizza</h1>
+        <p></p>
     </header>
+    <p>Main image</p>
+
+    <article>
+        <p>p1</p>
+        <p>p2</p>
+        <p>p3</p>
+    </article>
 </body>
 </html>
