adding tags to html

--- a/index.html
+++ b/index.html
@@ -21,5 +21,10 @@
         <p>p2</p>
         <p>p3</p>
     </article>
+    <div>paper image</div>
+    <p>tiny lady img</p>
+    <h3>Vanessa Stevenson</h3>
+    <p></p>
+    <p>share recipe button</p>
 </body>
 </html>
