adding to html structure

--- a/index.html
+++ b/index.html
@@ -8,23 +8,41 @@
 </head>
 <body>
     <header>
-        <nav>
-
+        <nav class ="top">
+            <p><img src="" alt=""></p>
+            <p id="links">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+            </p>
         </nav>
-        <h1>Cholcolate Pizza</h1>
-        <p></p>
+        <div class ="title">
+            <h1>Cholcolate Pizza</h1>
+            <p></p>
+            <p id="tinyPrint"></p>
+        </div>
     </header>
     <p>Main image</p>
-
     <article>
         <p>p1</p>
         <p>p2</p>
         <p>p3</p>
     </article>
-    <div>paper image</div>
-    <p>tiny lady img</p>
-    <h3>Vanessa Stevenson</h3>
-    <p></p>
-    <p>share recipe button</p>
+    <div id="paper">paper image</div>
+    <div class="bottom">
+        <p>tiny lady img</p>
+        <h3>Vanessa Stevenson</h3>
+        <p></p>
+        <p>share recipe button</p>
+    </div>div>
+    <footer>
+        <p></p>
+        <p></p>
+    </footer>
 </body>
 </html>
