--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -33,13 +36,30 @@
         <p>p2</p>
         <p>p3</p>
     </article>
-    <div id="paper">paper image</div>
+    <div id="paper"><img id="list" src="img/list-bg.png">
+        <ul id="left">
+            <li><input type="checkbox">1 1/2 cups milk</li>
+            <li><input type="checkbox">1/2 cup mascarpone</li>
+            <li><input type="checkbox">1/2 tsp pink salt</li>
+            <li><input type="checkbox">1 lb Black Mission Figs</li>
+            <li><input type="checkbox">1/2 cup brown sugar</li>
+            <li><input type="checkbox">2-4 tbsp water</li>
+        </ul>
+        <ul id="right">
+                <li><input type="checkbox">1 1/2 cups heavy cream</li>
+                <li class = "checked"><input type="checkbox" checked>1/3 granulated sugar</li>
+                <li class ="checked"><input type="checkbox" checked>2 egg yolks</li>
+                <li><input type="checkbox">1 lemon, juiced</li>
+                <li><input type="checkbox">2 tbsp butter</li>
+                <li><input type="checkbox">1 cup honey roasted pecans, roughly chopped</li>
+            </ul>
+    </div>
     <div class="bottom">
-        <p>tiny lady img</p>
+        <p><img src="img/van-pic.png"></p>
         <h3>Vanessa Stevenson</h3>
-        <p></p>
-        <p>share recipe button</p>
-    </div>div>
+        <p>Food enthusiast, photograpgy fan. Add a pinch of raw foodism and that's pretty much who I am.</p>
+        <p id ="share">SHARE RECIPE</p>
+    </div>
     <footer>
         <p></p>
         <p></p>
