working on footer of page

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 <li><input type="checkbox">1 cup honey roasted pecans, roughly chopped</li>
             </ul>
     </div>
+    <div id="bottomBorder"></div>
     <div class="bottom">
         <p><img src="img/van-pic.png"></p>
         <h3>Vanessa Stevenson</h3>
@@ -61,8 +62,9 @@
         <p id ="share">SHARE RECIPE</p>
     </div>
     <footer>
-        <p></p>
-        <p></p>
+        <img src="img/small-logo.png">
+        <p>Delicious &copy; 2013 all rights reserved.</p>
+        <p>Proudly published with Ghost.</p>
     </footer>
 </body>
 </html>
