--- a/index.html
+++ b/index.html
@@ -5,33 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <nav class ="top">
-            <p><img src="" alt=""></p>
-            <p id="links">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-            </p>
+            <p><img src="img/logo.png" alt="">Delicious</p>
+            <section id="links">
+                <img src="img/fb-icon.png" alt="">
+                <img src="img/twit-icon.png" alt="">
+                <img src="img/gp-icon.png" alt="">
+                <img src="img/insta-icon.png" alt="">
+                <img src="img/flic-icon.png" alt="">
+                <img src="img/pint-icon.png" alt="">
+                <img src="img/rss-icon.png" alt="">
+                <img src="img/mail-icon.png" alt="">
+            </section>
         </nav>
         <div class ="title">
             <h1>Cholcolate Pizza</h1>
-            <p></p>
-            <p id="tinyPrint"></p>
+            <p>POSTED ON 15 DEC 2013/DESSERTS</p>
+            <section id="tinyPrint"><img src="img/print-icon.png" alt=""></section>
         </div>
     </header>
-    <p>Main image</p>
+    <p>
+        <img src="img/choco-pizza.png" alt="">
+    </p>
     <article>
-        <p>p1</p>
-        <p>p2</p>
-        <p>p3</p>
+        <p>For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.</p>
+        <p>Ice cream:In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely dissolved and the milk is just barely lukewarm. Whisk in the egg yolks. Set mixture in the frige and wait until the fig mixture is cooled.</p>
+        <p>Using an ice cream machine, pour liquids into the frozen basin and process according to the manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixutre, and the nut. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tupperware. Freeze for at least two hours before serving.</p>
     </article>
     <div id="paper">paper image</div>
     <div class="bottom">
@@ -39,7 +42,7 @@
         <h3>Vanessa Stevenson</h3>
         <p></p>
         <p>share recipe button</p>
-    </div>div>
+    </div>
     <footer>
         <p></p>
         <p></p>
