--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav class ="top">
-            <p><img src="img/logo.png" alt="">Delicious</p>
+            <p id="logo"><img src="img/logo.png" alt="">Delicious
             <section id="links">
                 <img src="img/fb-icon.png" alt="">
                 <img src="img/twit-icon.png" alt="">
@@ -24,11 +24,12 @@
                 <img src="img/rss-icon.png" alt="">
                 <img src="img/mail-icon.png" alt="">
             </section>
+            </p>
         </nav>
         <div class ="title">
             <h1>Cholcolate Pizza</h1>
-            <p>POSTED ON 15 DEC 2013/DESSERTS</p>
-            <section id="tinyPrint"><img src="img/print-icon.png" alt=""></section>
+            <p>POSTED ON 15 DEC 2013/DESSERTS<section id="tinyPrint"><img src="img/print-icon.png" alt=""></section></p>
+
         </div>
     </header>
     <p>
