tried to center bottom

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="bottomBorder"><p id ="share">SHARE RECIPE</p></div>
     <div class="bottom">
         <p><img src="img/van-pic.png"></p>
-        <section>
+        <section id="bottomSection">
             <h3>Vanessa Stevenson</h3>
             <p>Food enthusiast, photograpgy fan. Add a pinch of raw foodism and that's pretty much who I am.</p>
         </section>
